--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,9 @@
 title: Wandering The Surreal
 email: saviduhk@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Savidu Karunaratne's portfolio
 twitter_username: username
-github_username: username
+github_username: saviduhk
 minimal_mistakes_skin: dark
 search: true
 
@@ -58,22 +56,22 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
+  name   : "Savidu Karunaratne"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "A 3D Generlist interested in procedural workflows for game creation!"
   links:
-    - label: "Website"
+    - label: "Art Station"
       icon: "fas fa-fw fa-link"
-      url: "https://"
+      url: "https://www.artstation.com/saviduhk"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/saviduhk"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://www.instagram.com/saviduhk/"
 
 footer:
   links:
