--- a/_config.yml
+++ b/_config.yml
@@ -60,12 +60,12 @@ author:
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "A 3D Generlist interested in procedural workflows for game creation!"
   links:
+    - label: "Resume"
+      icon: "fab fa-fw fa-address-card"
+      url: "https://twitter.com/"
     - label: "Art Station"
       icon: "fas fa-fw fa-link"
       url: "https://www.artstation.com/saviduhk"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/saviduhk"
