--- a/_config.yml
+++ b/_config.yml
@@ -85,6 +85,11 @@ footer:
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/saviduhk/"
 
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
+
 defaults:
   # _posts
   - scope:
@@ -104,6 +109,15 @@ defaults:
     values:
       layout: single
       author_profile: true
+   
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
 
 category_archive:
   type: liquid
