--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,13 @@ paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
+# Added Collections for portfolio
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
+
+
 include:
   - _pages
   - _portfolio
@@ -86,10 +93,6 @@ footer:
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/saviduhk/"
 
-collections:
-  portfolio:
-    output: true
-    permalink: /:collection/:path/
 
 defaults:
   # _posts
