added email to side bar

--- a/_config.yml
+++ b/_config.yml
@@ -71,6 +71,9 @@ author:
     - label: "Resume"
       icon: "fab fa-fw fa-file"
       url: "/assets/cv_savidu.pdf"
+    - label: "Email"
+      icon: "fab fa-fw fa-file"
+      url: "saviduhk@gmail.com"
     - label: "Art Station"
       icon: "fas fa-fw fa-link"
       url: "https://www.artstation.com/saviduhk"
