Update email field

--- a/_config.yml
+++ b/_config.yml
@@ -71,9 +71,9 @@ author:
     - label: "Resume"
       icon: "fab fa-fw fa-file"
       url: "/assets/cv_savidu.pdf"
-    - label: "Email"
+    - label: "saviduhk@gmail.com"
       icon: "fab fa-fw fa-file"
-      url: "saviduhk@gmail.com"
+      url: ""
     - label: "Art Station"
       icon: "fas fa-fw fa-link"
       url: "https://www.artstation.com/saviduhk"
